feat: enhance AdminTeamController and AdminTeamService with detailed filtering and error handling for team and report management